# ece2168_dvs_project

./: .gitignore  CMakeLists.txt  README.md  collect_gesture_data.py  gesture_kernel.cpp  gesture_kernel.h  main.cpp  protocol.h  spi_receiver.cpp  spi_receiver.h  train_gesture_model.py  webcam_to_dvs.py
dut/common/: gesture_kernel.cpp  gesture_kernel.h  protocol.h
dut/e1x/: CMakeLists.txt  compat.c  debug_log_eff.cc  embed_model.py  main.cpp  spi_test.c  tflite_backend_eff.cpp
dut/rpi4/: CMakeLists.txt  main.cpp  tflite_backend.cpp
gesture_recognition/: CMakeLists.txt  gesture_kernel.cpp  kernel_util_eff.cc  main.cpp  protocol.h  quantization_util_effcc.cc
tools/: dvs_clip.py  power_logger.py
windows/: collect_gesture_data.py  gesture_receiver.py  requirements.txt  spi_test_sender.py  train_gesture_model.py  webcam_to_dvs.py
